webhook-listener-deployment_dockerhub.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-listener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webhook-listener
  template:
    metadata:
      labels:
        app: webhook-listener
    spec:
      containers:
      - name: webhook-listener
        image: scribby182/webhook-listener:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
        imagePullPolicy: Always
      imagePullSecrets:
      - name: image-pull-secret
