webhook-listener-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook-listener-service
spec:
  type: ClusterIP
  selector:
    app: webhook-listener
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
