webhook-listener-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: webhook-listener-destination-rule
spec:
  host: webhook-listener-service.andrew-scribner.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
